--- a/css/espressos-Colombia.css
+++ b/css/espressos-Colombia.css
@@ -86,7 +86,7 @@ main {
     gap: var(--space-2);            
     flex-shrink: 0;
     position: relative;
-    overflow: auto;
+    overflow-y: auto;
 }
 
 .product-info {
