--- a/css/non-homepage-cart-drawer.css
+++ b/css/non-homepage-cart-drawer.css
@@ -20,6 +20,7 @@
     position: fixed;
     top: 0;
     left: -100%;
+    min-height: 0;
     height: 100vh;
     width: 40%;
     background: linear-gradient(180deg, #E0E0D5 0%, #B5B5A3 100%);
@@ -69,10 +70,9 @@
     justify-content: flex-start;
     align-items: center;
     gap: 1rem;
+    width: 100%;
     min-height: 0;
     overflow-y: auto;
-    overflow-x: hidden;
-    width: 100%;
   }
 
   .cart-products .cart-product {
@@ -157,12 +157,18 @@
       order: 3;
       font-size: 1.25rem;
       font-weight: 700;
+      text-align: center;
       border: 3px solid #000;
       padding: 0 var(--space-1);
       border-radius: var(--radius);
       max-width: 4rem;
       text-align: center;
       background: #00000000;
+  }
+
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
   }
 
   .cart-product .cart-product-quantity .plus-icon {
